--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@ img{
 /*error panel */
 
 .error-panel{
-    position: absolute;
+    position: fixed;
     display: inline-block;
     color: var(--white);
     background-color: var(--dark);
-    height: 20vh;
+    /* height: 20vh; */
     width: 40vh;
     padding: 2rem;
     border-radius: 1rem;
@@ -117,7 +117,7 @@ img{
 .container{
     margin: auto;
     height: 80vh;
-    width: 100vh;
+    width: 50%;
 }
 
 .content{
@@ -221,8 +221,6 @@ img{
 }
 
 .task-list__item h2{
-    /* display: flex;
-    flex-wrap: wrap; */
     flex: 80%;
 }
 
@@ -276,15 +274,98 @@ img{
     opacity: 0;
 }
 
+.translate-to-bottom{
+    transform: translateY(0px) !important;
+}
 
 
-/* animete */
+/* responsive */
 
-@keyframes scale{
-    0%{
-        transform: scale(1);
+
+@media (min-width: 320px) and (max-width: 768px) {
+    body{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 1.6rem;
+        height: 100vh;
+        font-family: 'Lato', sans-serif;
     }
-    100%{
-        transform: scale(0);
+    .container{
+        padding: 5rem;
+        margin: 0;
+        width: 100%;
+        height: 100vh;
+        flex: 8;
+    }
+
+    .error-panel{
+        flex: 1;
+        position: relative;
+        display: inline-block;
+        color: var(--white);
+        background-color: var(--dark);
+        width: 100%;
+        padding: 2rem 2rem 1rem;
+        border-radius:0;
+        text-align: center;
+        bottom: 0;
+        left: 0;
+        transform: scale(1);
+        transform: translateY(-200px);
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+    }
+    
+    .brand{
+        padding: 2rem 0;
     }
 }
+
+@media (min-width: 769px) and (max-width: 1200px) {
+    body{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 1.6rem;
+        height: 100vh;
+        font-family: 'Lato', sans-serif;
+    }
+    
+    .container{
+        margin: 0 auto;
+        width: 80%;
+        height: 80vh;
+        flex: 8;
+    }
+
+    .error-panel{
+        flex: 1;
+        position: relative;
+        display: inline-block;
+        color: var(--white);
+        background-color: var(--dark);
+        width: 100%;
+        padding: 2rem 2rem 1rem;
+        border-radius:0;
+        text-align: center;
+        bottom: 0;
+        left: 0;
+        transform: scale(1);
+        transform: translateY(-200px);
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
+    }
+    
+    .brand{
+        padding: 2rem 0;
+    }
+}
+
+/* @media((min-width: 769px) and (max-width: 1200px)) {
+    
+    
+} */
+
+
+
